# cookiecutter-django-api

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .bumpversion.cfg  .dockerignore  .env-sample  .gitignore  CHANGELOG.md  Makefile  docker-compose.yml  gen_secret.py  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: build.yml  create-stable-release.yml  create_release_branch.yml
{{ cookiecutter.project_name }}/docker/: Dockerfile  docker-entrypoint.sh
{{ cookiecutter.project_name }}/docker/nginx/: nginx.conf
{{ cookiecutter.project_name }}/tests/local/api/models/: test_genre.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/local/api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/local/api/migrations/: 0001_initial.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/local/authentication/: apps.py  models.py  tests.py  urls.py  views.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/local/pages/: apps.py  urls.py  views.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/main/: settings.py  urls.py  wsgi.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/main/templates/layouts/: base-fullscreen.html  base.html
